--- a/token-swap/js/package.json
+++ b/token-swap/js/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@solana/spl-token-swap",
-  "version": "0.0.4",
+  "name": "@orca-so/spl-token-swap",
+  "version": "0.0.5",
   "description": "SPL Token Swap JavaScript API",
   "license": "MIT",
   "author": "Solana Maintainers <maintainers@solana.foundation>",
